--- a/style.css
+++ b/style.css
@@ -183,9 +183,8 @@ nav ul li a:hover::after {
 .about-col-2 img { /* portrait */
     width: 100%;
     border-radius: 100px;
-    border: 5px solid #9f9f9f;
+    border: 4px solid #9b9b9b;
     margin-top: 60px;
-    animation: slideInFromTop 3s ease-out;
 }
 
 .sub-title {
